# react-flow-dbt-lineage

./: .gitignore  LICENSE  package-lock.json  package.json  pyproject.toml
lineage_tool/: __main__.py  analyzer.py  cli.py  db.py  parser.py  utils.py
lineage_tool/dialects/: greenplum.py
public/: LineageParser.py  catalog.json  lineage.json  lineage_parser_sqlglot.py  lineage_parser_sqlglot_lineage_till_ultimate_source.py  lineage_parser_sqlglot_study.py  lineage_parser_sqlglot_w_lineagemethod.py  lineage_parser_sqlglot_w_lineagemethod_json_groupby.py  lineage_parser_sqllineage.py  manifest.json
src/: App.css  App.js  App.tsx  App_functional_backup.js  TableNode.js  custom.d.ts  dbt-metadata.js  index.css  index.tsx
src/components/Flow/: Flow.tsx
src/components/Header/: ClearButton.tsx  Header.module.css  Header.tsx  SearchBar.tsx  TagFilter.tsx
src/components/Node/: DataTypeIcon.tsx  NodeColumn.tsx  NodeHeader.tsx  TableNode.module.css  TableNode.tsx
src/hooks/: useDbtData.ts  useGraphFilters.ts  useUrlSync.ts
src/services/: dbtParsingService.ts  layoutService.ts
src/types/: dbt.ts  index.ts
src/utils/: graphUtils.ts
tests/: sqlglot_tests.ipynb
tests/cte-json-complex_groupby/: catalog.json  manifest.json
tests/cte-json_building-json_access/: catalog.json  manifest.json
tests/greenplum/: GreenplumDialect.py  GreenplumLineageParser.py  lineage.json  schema.json  script.sql  test_greenplum_dialect.py
tests/greenplum/my_sql_scripts/: script.sql
tests/multilevel_ctes-simple_functions/: catalog.json  lineage.json
utils/: LineageParser.py
